# xmonad-flake

./: .gitignore  build  flake.nix  install.sh  my-xmonad.cabal  utils.nix  xmodmap  xmonad.hs
lib/: Projects.hs
polybar/: config.ini  default.nix
tmuxinator-projects/: default.yml
