name:                my-xmonad
version:             0.1.0.0
license:             BSD3
author:              Mark Bishop
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  hs-source-dirs: .
  main-is:             xmonad.hs
  -- other-modules lists custom modules in my .xmonad/lib/ directory
  build-depends:       base
                     , containers
                     , data-default
                     , monoid-subclasses
                     , mtl
                     , process
                     , unix
                     , utf8-string
                     , X11
                     , split
                     , dbus
                     , xmonad >= 0.17
                     , xmonad-contrib >= 0.17
                     , time
                     , directory
                     , text
                     , optparse-applicative
  hs-source-dirs:      lib
  other-modules:       Projects
  default-language:    Haskell2010
  ghc-options:         -threaded
